--- a/src/styles.css
+++ b/src/styles.css
@@ -542,6 +542,29 @@ button:focus {
 }
 
 /* --------- */
+/* Skills */
+/* --------- */
+
+.skills{
+  
+  font-size: 4.5em !important;
+  margin: 15px !important;
+  padding: 10px !important;
+  opacity: 0.93 !important;
+  border: 1.7px solid rgba(200, 137, 230, 0.637) !important;
+  vertical-align: middle !important;
+  text-align: center !important;
+  border-radius: 5px !important;
+  display: table !important;
+  box-shadow: 4px 5px 4px 3px rgba(89, 4, 168, 0.137) !important;
+  overflow: hidden !important;
+  transition: all 0.4s ease 0s !important;
+
+}
+
+
+
+/* --------- */
 /* About */
 /* --------- */
 
@@ -567,22 +590,7 @@ button:focus {
   overflow: hidden !important;
   transition: all 0.4s ease 0s !important;
 }
-.skills{
-  
-    font-size: 4.5em !important;
-    margin: 15px !important;
-    padding: 10px !important;
-    opacity: 0.93 !important;
-    border: 1.7px solid rgba(200, 137, 230, 0.637) !important;
-    vertical-align: middle !important;
-    text-align: center !important;
-    border-radius: 5px !important;
-    display: table !important;
-    box-shadow: 4px 5px 4px 3px rgba(89, 4, 168, 0.137) !important;
-    overflow: hidden !important;
-    transition: all 0.4s ease 0s !important;
-  
-}
+
 
 @media (max-width: 767px) {
   .tech-icons {
